<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/map_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/map_search_begin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:background="@color/c8"
            android:descendantFocusability="blocksDescendants">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0.3"
                android:layout_alignParentBottom="true"
                android:background="@color/c6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_36"
                android:layout_centerInParent="true"
                android:layout_margin="6dp"
                android:background="@drawable/edittext_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/common_search"
                android:drawablePadding="@dimen/dimen_5"
                android:gravity="center"
                android:text="@string/search_text"
                android:textColor="@color/c37"
                android:textSize="@dimen/dimen_14" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/map_out_wrap"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_260"
            android:orientation="vertical">

            <com.amap.api.maps.MapView
                android:id="@+id/map_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/point_image"
                android:layout_width="@dimen/dimen_20"
                android:layout_height="@dimen/dimen_20"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_5"
                android:contentDescription="@string/contentdescription"
                android:src="@drawable/common_icon_mark" />
        </FrameLayout>

        <com.xxyp.xxyp.map.pulltorefresh.PullToRefreshListView
            android:id="@+id/map_pull_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/transparent"
            android:divider="@color/c6"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:listSelector="@color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:background="@color/c8"
            android:padding="@dimen/dimen_5">

            <Button
                android:id="@+id/map_search_cancel"
                android:layout_width="@dimen/dimen_60"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dimen_1"
                android:layout_marginTop="@dimen/dimen_1"
                android:background="@drawable/sel_login_login_bg"
                android:text="@string/cancel"
                android:textColor="@drawable/sel_login_text"
                android:textSize="@dimen/dimen_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dimen_9"
                android:layout_toLeftOf="@id/map_search_cancel"
                android:background="@drawable/common_search_input_white_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_10">

                <ImageView
                    android:id="@+id/search_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/contentdescription"
                    android:src="@drawable/common_search" />


                <ImageView
                    android:id="@+id/map_search_clear"
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/common_close_gray"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/map_search_editView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/map_search_clear"
                    android:layout_toRightOf="@id/search_view"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:imeOptions="actionSearch"
                    android:paddingLeft="@dimen/dimen_5"
                    android:paddingRight="@dimen/dimen_5"
                    android:singleLine="true"
                    android:textColor="@color/c12" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_80"
                android:src="@drawable/icon_empty_search" />

            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40"
                android:text="@string/not_search_data"
                android:textColor="@color/c9" />
        </LinearLayout>

        <com.xxyp.xxyp.map.pulltorefresh.PullToRefreshListView
            android:id="@+id/map_search_pull_refresh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_3"
            android:layout_weight="1"
            android:cacheColorHint="@color/transparent"
            android:divider="@color/c6"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:listSelector="@color/transparent" />
    </LinearLayout>


</merge>